--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<br>
 	<p>
 	
-	<a class="button1" href="file:///C:/selenium%20course/HTML/index.html" target="_blank">Home</a>
+	
 	<a class="button1" href="https://www.linkedin.com/in/yonatan-bashiri-370665223" target="_blank">LinkedIn</a>
-	<a class="button1" href="file:///C:/selenium%20course/HTML/contact.html" target="_blank">Contact Me</a>
-	<a class="button1" href="file:///C:/selenium%20course/HTML/gallery.html" target="_blank">Gallery</a>
+	<a class="button1" href="contact.html" target="_blank">Contact Me</a>
+	<a class="button1" href="gallery.html" target="_blank">Gallery</a>
 	</p>
 	
 	
