--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="contactme.css">
 </head>
 <body>
-	<h1> 2 Simple Ways to Contact Me </h1>
+	<h1> Simple Ways to Contact Me </h1>
 	
 	<div class="box">
 	<span class="text">Yonatan Bashiri<br> <br>
