--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 	
 	<a class="button1" href="https://www.linkedin.com/in/yonatan-bashiri-370665223" target="_blank">LinkedIn</a>
-	<a class="button1" href="contact.html" target="_blank">Contact Me</a>
-	<a class="button1" href="gallery.html" target="_blank">Gallery</a>
+	<a class="button1" href="contact.html">Contact Me</a>
+	<a class="button1" href="gallery.html">Gallery</a>
 	</p>
 	
 	
