--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	
 	
-	<p class="pcolor1 bigfont"> <strong>Hello everyone, it's me <em><span style="background-color:black">Yonatan Bashiri</em></span> 
+	<p class="pcolor1 bigfont"> <strong>Hello everyone, it's <em><span style="background-color:black">Yonatan Bashiri</em></span> 
 I'm 25 years old, from Ashdod, Married to Sapir since 1 year.<br>
 4 Years ago, I was fat, really fat.
 I started eating alot in the army and didn't train until I couldn't look at myself anymore.<br>
