--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	
 	<p class="pcolor1 bigfont"> <strong>Hello everyone, it's <em><span style="background-color:black">Yonatan Bashiri</em></span> 
 I'm 25 years old, from Ashdod, Married to Sapir since 1 year.<br>
-4 Years ago, I was fat, really fat.
-I started eating alot in the army and didn't train until I couldn't look at myself anymore.<br>
-I was shy at the beach, had no self confidence.<br>
-Until I decided that I must make a change, I must exercise and start eating healthy.<br>
-I fell in love with the gym and decided to study "Personal Training". <br>
+Maybe you can't see this in the picture up there, but 4 years ago, I was VERY FAT.
+I started eating alot in the army and didn't train, until I couldn't look at myself anymore.<br>
+I was shy at the beach because I didn't like my body... I had no self confidence at all.<br>
+One day, I decided that I must make a change, I must exercise and start eating healthy.<br>
+So I went to the gym for the first time, it felt amazing...I fell in love with the tension on my muscles and the pain during the workout... and decided to study "Personal Training". <br>
  Now I'm a certificated Personal Trainer from Wingate.</strong>
 <br>
 	</strong>
